--- a/Lab_one_linear_regression.ipynb
+++ b/Lab_one_linear_regression.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "if __name__ == '__main__':\n",
     "    # step1: Load the experiment data\n",
-    "    t_X,t_y = load_svmlight_file(\"F:/PythonExs/lab_one/housing_scale\")\n",
+    "    t_X,t_y = load_svmlight_file(\"housing_scale\")\n",
     "\n",
     "    # step2: Divide dataset\n",
     "    X_train, X_valid, y_train, y_valid  = train_test_split(t_X,t_y,test_size=0.33,random_state=42)\n",
